CSS/palorant.css
/* ... */
@media (max-width: 768px) {
    .season {
        background-position: -150px center;
    }

    .palorant-img {
        width: 400px;
    }

    .agents {
        gap: 10px;
        position: relative;
        display: flex;
        flex-direction: column-reverse;
        justify-content: flex-start;
    }

    .agents-right {
        width: 50%;
        height: 70%;
        top: 0;
        right: 0;
        align-items: flex-end;
        position: absolute;
    }

    .agent-card-container {
        background-size: 100%;
        background-position: center 20px;
    }

    .best-agent {
        padding: 1% 15%;
    }

    .agents-left {
        height: 50%;
        width: 100%;
        justify-content: flex-end;
    }

    .agents-left-center {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
    }

    .agents-left-bottom {
        height: auto;
    }

    .agents-meetyour {
        padding: 0 20px;
        font-size: clamp(14px, 3.5vw, 64px);
    }
    
    .agents-title {
        padding: 0 10% 0 20px;
        font-size: clamp(36px, 9vw, 120px);
    }

    .agents-desc {
        width: 100%;
        padding: 10px 20px;
        font-size: clamp(12px, 1.5vw, 18px);
    }

    .agents-btn {
        padding: 5px 10% 5px 20px;
        font-size: 16px;
        line-height: 100%;
    }

    .agents-left-bottom {
        padding-bottom: 20px;
    }

    .agents-left-top {
        display: none;
    }
}

@media (max-width: 480px) {
    .palorant-img {
        width: 300px;
    }

    .season-wrapper {
        width: 100%;
        padding-left: 10%;
    }

    .season-heading {
        font-size: 13vw;
        font-weight: 500;
        line-height: 100%;
        text-shadow: 0 0 25px black,
                     0 0 25px black,
                     0 0 25px black;
    }

    .season-text {
        width: 100%;
        padding: 5% 0;
        line-height: 100%;
    }

    .season-btn {
        font-size: clamp(12px, 4vw, 16px);
    }

    .identity-center {
        width: 100%;
        padding: 0 15px;
    }

    .identity-weare {
        text-align: center;
    }

    .identity-palorant-container {
        justify-content: center;
    }

    .identity-palorant {
        min-width: 280px;
    }

    .identity-text {
        text-align: center;
    }
    
    .identity-btn {
        padding: 1% 3.2rem 1% 2.5rem;
    }

    .agents-right {
        width: 100%;
        position: inherit;
        align-items: flex-end;
    }

    .agent-card-container {
        background-size: 80%;
        background-position: center 20px;
    }

    .best-agent {
        padding: 1% 15%;
    }

    .image-accordion {
        padding: 0 20px;
    }

    .maps-right-center {
        padding: 0 20px;
    }

    .maps-desc {
        font-size: clamp(12px, 1.5vw, 18px);
    }

    .maps-btn {
        padding: 0.5% 5% 0.5% 10%;
        font-size: 1rem;
    }
}

